# bloody-falcon

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
clients/: README.md  example.toml
config/: bloodyf4lcon.toml  client.demo.toml
docs/: SECURITY_DATA_HANDLING.md  SOC_CONTRACT.md
docs/prompts/: prompts_bloodyfalcon_v2_defensive_radar.md
fixtures/: run-2025-01-02.jsonl  run-alert-2025-01-02.jsonl  tui-rich.jsonl
src/: lib.rs  main.rs
src/cli/: commands.rs  config.rs  flags.rs  mod.rs
src/config/: mod.rs
src/core/: alert.rs  disk_cache.rs  engine.rs  error.rs  hash.rs  mod.rs  output.rs  scope.rs  signal.rs  signal_utils.rs  store.rs  time.rs  types.rs
src/detectors/: mod.rs  typosquat.rs
src/modules/: detections.rs  mod.rs
src/modules/recon/: username.rs
src/pipeline/: collector.rs  correlator.rs  escalator.rs  mod.rs  normalizer.rs  reporter.rs  scorer.rs
src/sources/: cache.rs  mod.rs  rate_limiter.rs
src/ui/: app.rs  mod.rs  terminal.rs  tui.rs  widgets.rs
tests/: engine_tests.rs  replay_manifest.rs
