[package]
name = "bloody-falcon"
version = "0.1.0"
edition = "2021"
description = "🦅 OSINT Framework - Bloody Monday Terminal Aesthetics"
keywords = ["osint", "recon", "cybersecurity", "rust", "tui"]
categories = ["command-line-utilities", "network-programming"]

[[bin]]
name = "bloody-falcon"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
ratatui = "0.26"
crossterm = "0.27"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml = "0.8"
thiserror = "1.0"
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
strsim = "0.11"
[dev-dependencies]
httpmock = "0.7"
tokio = { version = "1", features = ["full"] }
